2000-06-13  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>

	* scheduler/scheduler.c, man/scheduler.8, scheduler/mq2.c,
	  scheduler/mailq.pl:
	    Playing with MAILQ-V2 code to get (experimental) version
	    of detailed reporting a'la old mailq-v1 code.

2000-06-07  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>

	* transports/libta/ctlopen.c:
	    If ctlopen() contained open() of message body file fails,
	    send a warning() up to the scheduler log WITH errno of
	    that open() call..

	* proto/db/smtp-policy.src:
	    _RBL* alias labels are turned to LOWER CASE -- those keys
	    are lowercased during encoding, but data attributes are
	    not modified while compiling the database, nor when looking
	    up tags..

	* smtpserver/smtpserver.h, smtpserver/smtpdata.c,
	  smtpserver/cfgread.c,    smtpserver/contentpolicy.c,
	  utils/smtp-contentfilter.in:
	    CONTENT policy interface, and sample filter implementation..

	* scheduler/scheduler.c, scheduler/conf.c, scheduler/msgerror.c,
	  man/scheduler.8:
	    Modify the '-n' option semantics to control how DSN RET
	    option value is set in absense of originator supplied value.

2000-06-02  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>

	* scheduler/mailq.c:
	    Count files in POSTOFFICE/router/ directory also when
	    it is subdir-hashed..

	* router/daemonsub.c:
	    Tried actually to use ROUTERDIRHASH=1 mode, and learned
	    of bitter errors at the subchild feeder code...  Dirname
	    was written twice to the workfilename.

	* router/libdb/header.c:
	    Allow just about *any* character to appear at headers
	    database key fields..  old limits were too strict anyway.

	* proto/post-install.sh.in:
	    More minor tweaks.

2000-05-28  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>

	* proto/Makefilein, proto/post-install.sh.in:
	    Small fixes that disjoint installation test shows up..

2000-05-26  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>

	* transports/smtp/smtp.c, transports/smtp/smtp.h: